Initialize package.json for mind-bot project

--- a/MavludovMindBot/package.json
+++ b/MavludovMindBot/package.json
@@ -1,1 +1,13 @@
-npm install telegraf node-fetch dotenv 
+{
+  "name": "mind-bot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "node-telegram-bot-api": "^0.66.0",
+    "openai": "^4.0.0"
+  }
+}
